; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_rdma.c_rds_iw_destroy_mr_pool.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_rdma.c_rds_iw_destroy_mr_pool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_iw_mr_pool = type { i32, i32 }

@rds_wq = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rds_iw_destroy_mr_pool(%struct.rds_iw_mr_pool* %0) #0 {
  %2 = alloca %struct.rds_iw_mr_pool*, align 8
  store %struct.rds_iw_mr_pool* %0, %struct.rds_iw_mr_pool** %2, align 8
  %3 = load i32, i32* @rds_wq, align 4
  %4 = call i32 @flush_workqueue(i32 %3)
  %5 = load %struct.rds_iw_mr_pool*, %struct.rds_iw_mr_pool** %2, align 8
  %6 = call i32 @rds_iw_flush_mr_pool(%struct.rds_iw_mr_pool* %5, i32 1)
  %7 = load %struct.rds_iw_mr_pool*, %struct.rds_iw_mr_pool** %2, align 8
  %8 = getelementptr inbounds %struct.rds_iw_mr_pool, %struct.rds_iw_mr_pool* %7, i32 0, i32 1
  %9 = call i32 @atomic_read(i32* %8)
  %10 = call i32 @BUG_ON(i32 %9)
  %11 = load %struct.rds_iw_mr_pool*, %struct.rds_iw_mr_pool** %2, align 8
  %12 = getelementptr inbounds %struct.rds_iw_mr_pool, %struct.rds_iw_mr_pool* %11, i32 0, i32 0
  %13 = call i32 @atomic_read(i32* %12)
  %14 = call i32 @BUG_ON(i32 %13)
  %15 = load %struct.rds_iw_mr_pool*, %struct.rds_iw_mr_pool** %2, align 8
  %16 = call i32 @kfree(%struct.rds_iw_mr_pool* %15)
  ret void
}

declare dso_local i32 @flush_workqueue(i32) #1

declare dso_local i32 @rds_iw_flush_mr_pool(%struct.rds_iw_mr_pool*, i32) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @kfree(%struct.rds_iw_mr_pool*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
